tenants/openshift-day/maas-route/base/maas-gateway-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: maas-gateway-route
  namespace: openshift-ingress
  annotations:
    router.openshift.io/service-ca-certificate: 'true'
spec:
  host: maas.apps.ocp.5k84w.sandbox1301.opentlc.com
  to:
    kind: Service
    name: maas-default-gateway-data-science-gateway-class
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
